@@ -1,4 +1,8 @@
-2014-07-31  6.8.9-8 Dirk Lemstra <dirk@snakeware...>
+2014-09-16  6.8.9-8 Cristy  <quetzlzacatenango@image...>
+  * JPEG library version >= 80 is thread safe (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=25495).
+
+2014-08-31  6.8.9-8 Dirk Lemstra <dirk@snakeware...>
   * Added support for some legacy dds formats (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=26184).
 
